--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,15 @@
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/ui": "^0.7.2",
     "autoprefixer": "^10.0.4",
+    "firebase": "^8.1.2",
+    "firebase-admin": "^9.4.1",
+    "js-cookie": "^2.2.1",
     "next": "10.0.3",
     "postcss": "^8.1.14",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-firebaseui": "^4.1.0",
+    "swr": "^0.3.9",
     "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
